[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[features]
default = []

[dependencies]
byteorder = "1.3.2"
libc = "0.2.60"

acpi_tables = { path = "../acpi_tables", optional = true }
arch_gen = { path = "../arch_gen" }

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
features = ["backend-mmap"]

[dependencies.linux-loader]
git = "https://github.com/rust-vmm/linux-loader"
features = ["elf", "bzimage"]

[dependencies.kvm-bindings]
git = "https://github.com/bjzhjing/kvm-bindings"
branch = "serde_strict_v1"
features = ["with-serde", "fam-wrappers"]

[dependencies.kvm-ioctls]
git = "https://github.com/bjzhjing/kvm-ioctls"
branch = "add-support-for-migration"

[dev-dependencies]
rand = "0.7.2"
