[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = "1.3.2"
epoll = ">=4.0.1"
libc = "0.2.60"
log = "0.4.8"
vm-memory = { git = "https://github.com/rust-vmm/vm-memory" }

[dependencies.vmm-sys-util]
git = "https://github.com/aghecenco/vmm-sys-util"
branch = "serde"
features = ["with-serde"]

[dependencies.kvm-bindings]
git = "https://github.com/bjzhjing/kvm-bindings"
branch = "serde_strict_v1"
features = ["with-serde", "fam-wrappers"]

[dependencies.kvm-ioctls]
git = "https://github.com/bjzhjing/kvm-ioctls"
branch = "add-support-for-migration"

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = []
acpi = []
cmos = []
