[package]
name = "net_util"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
libc = "0.2.60"
rand = "0.7.2"
serde = "1.0.98"

net_gen = { path = "../net_gen" }

[dependencies.vmm-sys-util]
git = "https://github.com/aghecenco/vmm-sys-util"
branch = "serde"
features = ["with-serde"]

[dev-dependencies]
lazy_static = "1.3.0"
pnet = "0.23.0"
serde_json = "1.0.40"
