[package]
name = "vfio"
version = "0.0.1"
authors = ["The Cloud Hypervisor Authors"]

[dependencies]
arc-swap = ">=0.4.4"
byteorder = "1.3.2"
devices = { path = "../devices" }
libc = "0.2.60"
log = "0.4.8"
pci = { path = "../pci" }
vfio-bindings = "0.1.0"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
features = ["backend-mmap"]

[dependencies.vmm-sys-util]
git = "https://github.com/aghecenco/vmm-sys-util"
branch = "serde"
features = ["with-serde"]

[dependencies.kvm-bindings]
git = "https://github.com/bjzhjing/kvm-bindings"
branch = "serde_strict_v1"
features = ["with-serde", "fam-wrappers"]

[dependencies.kvm-ioctls]
git = "https://github.com/bjzhjing/kvm-ioctls"
branch = "add-support-for-migration"
