[package]
name = "vmm"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[features]
default = []
acpi = ["acpi_tables","devices/acpi"]
pci_support = ["pci", "vfio", "vm-virtio/pci_support"]
mmio_support = ["vm-virtio/mmio_support"]
cmos = ["devices/cmos"]

[dependencies]
arc-swap = ">=0.4.4"
clap = "2.33.0"
acpi_tables = { path = "../acpi_tables", optional = true }
anyhow = "1.0"
arch = { path = "../arch" }
devices = { path = "../devices" }
epoll = ">=4.0.1"
lazy_static = "1.4.0"
libc = "0.2.62"
log = "0.4.8"
micro_http = { git = "https://github.com/firecracker-microvm/firecracker", branch = "master" }
net_util = { path = "../net_util" }
pci = {path = "../pci", optional = true}
qcow = { path = "../qcow" }
serde = {version = ">=1.0.27", features = ["rc"] }
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
vfio = { path = "../vfio", optional = true }
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-virtio = { path = "../vm-virtio" }
signal-hook = "0.1.10"

[dependencies.linux-loader]
git = "https://github.com/rust-vmm/linux-loader"
features = ["elf", "bzimage"]

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
features = ["backend-mmap"]

[dependencies.vmm-sys-util]
git = "https://github.com/aghecenco/vmm-sys-util"
branch = "serde"
features = ["with-serde"]

[dependencies.kvm-bindings]
git = "https://github.com/bjzhjing/kvm-bindings"
branch = "serde_strict_v1"
features = ["with-serde", "fam-wrappers"]

[dependencies.kvm-ioctls]
git = "https://github.com/bjzhjing/kvm-ioctls"
branch = "add-support-for-migration"
